--- a/src/static/styles/main.styl
+++ b/src/static/styles/main.styl
@@ -1,12 +1,22 @@
 html,head,body
   padding:0
   margin:0
-  height: 100vh
+  background-color: #3B404C
 
 body
   font-family: Futura, helvetica, arial, sans-serif
 
-#main
-  padding:0
-  margin:0
-  height: 100vh
+.drawing
+  margin: auto;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  height: 80vh;
+  width: 88vh;
+
+.title
+  position: absolute
+  display: inline
+  top: 1vh
+  width: 100%
+  text-align: center
+  color: #e9e9e9
