--- a/src/static/styles/main.styl
+++ b/src/static/styles/main.styl
@@ -8,10 +8,10 @@ body
 
 .drawing
   margin: auto;
-  padding-top: 10vh;
-  padding-bottom: 10vh;
-  height: 80vh;
-  width: 88vh;
+  padding-top: calc((100vh - 80vmin)/2);
+  padding-bottom: calc((100vh - 80vmin)/2);
+  height: 80vmin;
+  width: 80vmin;
 
 .title
   position: absolute
