--- a/src/static/styles/main.styl
+++ b/src/static/styles/main.styl
@@ -20,3 +20,25 @@ body
   width: 100%
   text-align: center
   color: #e9e9e9
+
+
+.controls
+  position: absolute
+  display: inline
+  bottom: 1vh
+  width: 100%
+  text-align: center
+  color: #e9e9e9
+  height: 64px
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: center
+
+.control
+  padding: 20px
+  border-bottom: 4px solid transparent
+
+  &.selected
+    border-bottom: 4px solid #aaaaaa
+
